Fix(CSS): delete modal confirmation z-index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -257,6 +257,7 @@ input {
     margin: 10px 0 !important;
 }
 
+
 /* HEADER STYLES--------------------- */
 
 header {
@@ -374,6 +375,18 @@ header {
     background-color: var(--clr-primary);
 }
 
+
+/* Bootstrap modal styles */
+
+.modal {
+    z-index: 999;
+    margin-top: 30px;
+    padding-top: 40px;
+}
+
+.modal-backdrop {
+    z-index: 998;
+}
 @media screen and (min-width: 576px) {
     .home-descriptions-card {
         height: 280px;
